corrected alignment and increaded font size

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -33,7 +33,7 @@
     color: #0078d7;
 
     @media screen and (max-width: 414px) {
-      font-size: 1.8rem;
+      font-size: 2.5rem;
       font-weight: 700;
     }
   }
