--- a/src/styles/project2.scss
+++ b/src/styles/project2.scss
@@ -12,8 +12,9 @@
     text-align: center;
     font-size: 2rem;
     padding: 2rem;
-    margin-top: 2rem;
+    margin-top: 10rem;
   }
+
   .project-image-text-container {
     // background-color: yellow;
     margin-bottom: 8rem;
@@ -81,6 +82,13 @@
       letter-spacing: 1px;
 
       box-shadow: 10px 10px 25px -14px rgba(0, 0, 0, 1);
+    }
+  }
+  .abc {
+    display: none;
+    @media screen and (max-width: 414px) {
+      display: flex;
+      flex-direction: column-reverse;
     }
   }
 }
